# python_flask_example

./: .gitignore  .travis.yml  LICENSE  Procfile  README.md  requirements.txt  setup.cfg  setup.py
python_flask_example/: __init__.py  app.py
python_flask_example/static/: style.css
python_flask_example/static/sass/: style.scss
python_flask_example/templates/: base.html
python_flask_example/templates/auth/: login.html  register.html
python_flask_example/templates/blog/: create.html  index.html  update.html
src/python_flask_example/: __init__.py
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
