[metadata]
name = python_flask_example
version = 1.0.0
url = https://flask.palletsprojects.com/tutorial/
license = BSD-3-Clause
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = The basic blog app built in the Flask tutorial.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    wheel
    gunicorn
    flask

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = python_flask_example
