[metadata]
name = python_flask_example
version = 0.1.0
license = MIT
description = Basic web app based on the blog app built in the Flask tutorial.
url = https://github.com/RichardPoulson/python_flask_example
project_urls =
    Bug Tracker = https://github.com/RichardPoulson/python_flask_example/issues
    Source Code = https://github.com/RichardPoulson/python_flask_example
    Documentation = https://github.com/RichardPoulson/python_flask_example/blob/master/README.md
license_file = LICENSE
author = Richard Poulson
author_email = contact@richardpoulson.com
maintainer = Richard Poulson
maintainer_email = contact@richardpoulson.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Framework :: Flask',
    'Framework :: Pytest',
    'License :: OSI Approved :: MIT License',
    'Topic :: Internet :: WWW/HTTP :: HTTP Servers',
    'Topic :: Internet :: WWW/HTTP :: WSGI :: Server',
keywords = Flask, Python, HTTP, WSGI, server

[options]
packages = find:
include_package_data = true
install_requires =
    wheel
    gunicorn
    flask

[options.package_data]
python_flask_example =
    *.sql
    *.css
    *.html

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = python_flask_example
